# ChangeLog for sys-apps/calculate
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-1.3.1 (02 Dec 2009)

  02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  -calculate-1.2.12-r2.ebuild, +calculate-1.3.1.ebuild:
  Version bump. Remove old.

*calculate-1.3.0 (01 Dec 2009)

  01 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +calculate-1.3.0.ebuild, +metadata.xml:
  Ebuild for new version of calculate.
