@@ -1,6 +1,4 @@
-DIST calculate-1.3.0.tar.bz2 199148 RMD160 24af6a15676ca19c7a94349c7f39a3cfba15ad39 SHA1 b4b5a6ea0b281b2cad37c63149f1d14feabc6d94 SHA256 952aafdb7d684e54a1c52667bb0366542237cff0c390422d0f313d9c896ed6e5
 DIST calculate-1.3.1.tar.bz2 199327 RMD160 0fdc3b0113bb12c1a22f15bb8b620daf6db8756b SHA1 0d94725fe0159d2a254b83c6c93ad6a3ea46d8c9 SHA256 0650cac8ca02e8b00512c19c1ae1c5023fb1bf67633424654adbe66df37e4342
-EBUILD calculate-1.3.0.ebuild 1870 RMD160 3e0567790fd243d9ed2c403c35d80902b5129e79 SHA1 4837874dd775488de182007416794da4f8c1d9d7 SHA256 f460c3bfe1ecb8a6a1f0f551e5c0e1a70c5b0fdafb05cf76eb97961c59099afc
 EBUILD calculate-1.3.1.ebuild 1870 RMD160 3e0567790fd243d9ed2c403c35d80902b5129e79 SHA1 4837874dd775488de182007416794da4f8c1d9d7 SHA256 f460c3bfe1ecb8a6a1f0f551e5c0e1a70c5b0fdafb05cf76eb97961c59099afc
 EBUILD calculate-9999.ebuild 1467 RMD160 a259a067eab2f7ea56fae2bf64b0c5ddcf8ef59c SHA1 38720c563dfd70153b8e729c4e136fdb63b568aa SHA256 f2ac27af8ef5ea1525d536a91a4bcb79d8262652b67ae34b96c26f1f84110712
 MISC ChangeLog 468 RMD160 7013927d963bd95d8f4aabbf8b52eefe21ddf9c3 SHA1 1d5e27aab5fafd7d416a44193dfc836cefa328f8 SHA256 36d38273227f50ed59befded0e140578e9a3f01d79ee2415e23ce4d0799b4b5d
