@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
+  -calculate-1.3.0.ebuild:
+  Remove old.
+
 *calculate-1.3.1 (02 Dec 2009)
 
   02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
